Tol<FT>::result is now an inline static function, to workaround a bug of g++>=4.1   http://gcc.gnu.org/bugzilla/show_bug.cgi?id=36912 g++ does not like const floating expression when -frounding-math is used.